# pain-detection

./: .gitignore  README.md
pain-detection/: pyproject.toml
pain-detection/models/: scaler_100.pkl  your_model_100.h5
pain-detection/notebooks/: stream-text-emotion.ipynb
pain-detection/pain_detection/: predict.py  train.py
pain-detection/tests/: test_pain_detection.py
pose/: app.py  audio.py  emotion_graph.py  face.csv  face_mesh_processor.py  models.py  utils.py
