[tool.poetry]
name = "pain-detection"
version = "0.1.0"
description = ""
authors = ["lastc <lastc@mit.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
openai = "^1.3.8"
opencv-python = "^4.8.1"
pandas = "^2.1.4"
mediapipe = "0.10.8"
scikit-learn = "^1.3.2"
pytube = "^15.0.0"
ipykernel = "^6.27.1"
tensorflow = "^2.15.0"
hume = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
